2015-08-27  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Revise Price's VT implementation
	* Clean up codes

2015-08-14  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Add version checker for Linux version
	* Improve user interface by print effective commandline options

2015-08-14  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Improve SKAT accuracy to match SKAT R package
	* Add option maxMAF for vcf2plink

2015-07-20  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Fix covariance bugs for binary traits of unrelated individuals

2015-07-01  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Improve stability for Price's VT test
	* Improve error handling when files are missing
	* Fix calculation of minor allele frequency when extracting genotypes

2015-06-30  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Improve SKAT speed
	* Improve error handling when files are missing
	* Provide more warning messages

2015-06-02  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Output more statistics for binary meta-analysis
	* Remove 'auto' keyword to support more g++ compiler

2015-05-11  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Change '--meta score' for binary related individuals
	* Improve documentation

2015-05-09  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Fix and verified '--meta cov' outputs
	* Improve SKAT permutation
	* Improve documentation

2015-04-30  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Support generating meta analysis summary statistics for binary traits related individuals
	* Fix '--meta cov' calculation in the hemizygous region

2015-04-23  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Update PAR region definition (now support hg38/GRCh38)
	* Fix duplicated variants in gene/set based tests

2015-04-02  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Fix output formats for Firth regression
