@@ -1,3 +1,7 @@
+2015-09-02  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>
+
+	* Improve stability of logistic regression model
+
 2015-08-27  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>
 
 	* Revise Price's VT implementation
